[ERE-1430] Fix mis-alignment of sidebar

--- a/rdrf/rdrf/static/css/rdrf.css
+++ b/rdrf/rdrf/static/css/rdrf.css
@@ -95,7 +95,7 @@ html, body {
         height: 100%;
         width: 300px;
         padding: 0;
-        top: 51px;
+        top: 54px;
         z-index: 100000;
 
         box-shadow: 5px 0 5px -5px #888888;
